test_core 百度单账号验证成功

--- a/docs/项目维护指南.md
+++ b/docs/项目维护指南.md
@@ -1,158 +1,217 @@
-# 项目维护指南
+# 智能自动化测试脚手架 - 项目维护指南
 
-本文档面向新加入的开发者与 AI IDE 会话，帮助快速理解项目结构、技术栈与运行流程，并提供开发/测试规范。
+## 📋 项目概述
+
+基于 pytest + Playwright + olymat 框架的智能浏览器自动化测试脚手架，核心解决浏览器登录状态管理问题，让测试开发者专注于业务逻辑实现。
+
+## 🏗️ 项目架构
+
+### 核心组件
+- **olymat 框架**：基础测试框架，提供配置管理和基础 fixtures
+- **Playwright**：浏览器自动化引擎
+- **pytest-asyncio**：异步测试支持
+- **SimpleBrowserAuth**：核心登录状态管理类
+
+### 目录结构
+```
+test_core/
+├── confs/
+│   └── default.yaml          # 核心配置文件
+├── browser_helper.py         # 浏览器登录状态管理
+├── conftest.py              # pytest fixtures 配置
+├── test_browser/            # 浏览器测试用例
+│   └── test_local.py        # 示例测试
+└── auth/                    # 登录状态存储目录 (git ignored)
+    └── *.json              # 用户登录状态文件
+```
+
+## ⚙️ 配置系统
+
+### 主配置文件：`test_core/confs/default.yaml`
+```yaml
+browser:
+  sites:
+    github:
+      login_url: "https://github.com/login"
+      success_selector: ".Header-link--profile"
+    local:
+      login_url: "data:text/html,<html><body><h1>Test Page</h1><div class='success'>Logged in</div></body></html>"
+      success_selector: ".success"
+  users: ["user_a", "user_b"]
+```
+
+### 配置说明
+- **sites**: 目标测试网站配置
+  - `login_url`: 登录页面URL
+  - `success_selector`: 登录成功验证的CSS选择器
+- **users**: 用户标识符列表，用于状态文件命名
+
+## 🔧 核心功能
+
+### 1. 登录状态管理 (`SimpleBrowserAuth`)
+
+**智能环境检测**：
+- VSCode 测试环境：自动无头模式 + 模拟登录
+- 命令行环境：有头模式 + 手动登录
+- 调试模式：保持交互式体验
+
+**状态持久化**：
+- 使用 Playwright 的 `storage_state()` 保存完整浏览器状态
+- 包含 cookies, localStorage, sessionStorage 等
+- 文件格式：`auth/{site}_{user}.json`
+
+### 2. 测试编写接口
+
+**Fixture 使用**：
+```python
+@pytest.mark.parametrize('logged_in_page', [
+    {'site': 'github', 'user': 'user_a'}
+], indirect=True)
+async def test_github_feature(logged_in_page):
+    page = logged_in_page
+    # 直接使用已登录的 page 对象
+    await page.goto("https://github.com/settings")
+    # 业务逻辑测试...
+```
+
+**参数说明**：
+- `site`: 在 config.yaml 中定义的网站标识符
+- `user`: 用户标识符
+- `indirect=True`: 必须设置，让 pytest 将参数传递给 fixture
+
+## 🚀 使用方法
+
+### 1. VSCode 中运行测试
+- 点击测试文件中的 ▶️ 按钮
+- 使用测试资源管理器
+- **自动行为**：无头模式，模拟登录，快速执行
+
+### 2. 命令行运行测试
+```bash
+# 运行单个测试
+pytest test_core/test_browser/test_local.py::test_local_page -v -s
+
+# 运行所有浏览器测试
+pytest test_core/test_browser/ -v -s
+```
+**自动行为**：打开浏览器，等待手动登录，保存状态
+
+### 3. 调试模式
+- 设置断点后使用 F5 调试
+- **自动行为**：有头模式，支持交互式登录
+
+## 🔍 环境行为对比
+
+| 环境 | 浏览器模式 | 登录方式 | 超时时间 | 适用场景 |
+|------|------------|----------|----------|----------|
+| VSCode 测试 | 无头模式 | 模拟登录 | 10秒 | 快速测试验证 |
+| 命令行 | 有头模式 | 手动登录 | 5分钟 | 真实环境测试 |
+| 调试模式 | 有头模式 | 手动登录 | 5分钟 | 问题调试 |
+
+## 📝 开发指南
+
+### 添加新网站支持
+1. 在 `default.yaml` 中添加网站配置：
+```yaml
+browser:
+  sites:
+    new_site:
+      login_url: "https://example.com/login"
+      success_selector: ".user-menu"
+```
+
+2. 创建测试用例：
+```python
+@pytest.mark.parametrize('logged_in_page', [
+    {'site': 'new_site', 'user': 'user_a'}
+], indirect=True)
+async def test_new_site_feature(logged_in_page):
+    # 测试逻辑
+```
+
+### 添加新用户
+在 `default.yaml` 的 users 列表中添加：
+```yaml
+browser:
+  users: ["user_a", "user_b", "new_user"]
+```
+
+### 自定义模拟登录逻辑
+在 `browser_helper.py` 的 `_simulate_login_success` 方法中添加网站特定逻辑。
+
+## 🛠️ 故障排除
+
+### 常见问题
+
+**1. VSCode 测试卡住**
+- 检查 Python 扩展是否正常
+- 重启 VSCode
+- 确认 pytest 配置正确
+
+**2. 登录状态失效**
+- 删除 `auth/` 目录下对应的状态文件
+- 重新运行测试，手动登录
+
+**3. 选择器找不到元素**
+- 检查 `success_selector` 配置
+- 使用浏览器开发者工具验证选择器
+- 考虑页面加载时间，调整超时设置
+
+**4. 异步测试问题**
+- 确保测试函数使用 `async def`
+- 使用 `await` 调用异步方法
+- 检查 `pytest-asyncio` 插件是否安装
+
+### 调试技巧
+
+**查看浏览器状态**：
+```python
+# 在测试中添加调试代码
+await page.screenshot(path="debug.png")
+print(await page.content())
+```
+
+**检查登录状态文件**：
+```bash
+# 查看保存的状态
+cat auth/github_user_a.json
+```
+
+## 🔄 维护任务
+
+### 定期维护
+1. **清理过期状态文件**：定期删除 `auth/` 目录下的旧文件
+2. **更新选择器**：网站改版时更新 `success_selector`
+3. **依赖更新**：定期更新 Playwright 和相关依赖
+
+### 扩展开发
+1. **支持更多浏览器**：Chrome, Firefox, Safari
+2. **并发测试**：多用户并行测试
+3. **报告增强**：集成测试报告和截图
+4. **CI/CD 集成**：自动化测试流水线
+
+## 📊 性能优化
+
+### 建议配置
+- **VSCode 测试**：使用无头模式，快速验证
+- **CI/CD**：启用并发执行，设置合理超时
+- **本地开发**：保持状态文件，减少重复登录
+
+### 资源管理
+- 每个测试使用独立浏览器上下文
+- 测试结束后自动清理资源
+- 合理设置超时时间避免资源泄露
+
+## 🎯 最佳实践
+
+1. **测试隔离**：每个测试独立的浏览器上下文
+2. **状态管理**：合理使用登录状态缓存
+3. **错误处理**：优雅处理网络异常和超时
+4. **环境适配**：根据运行环境自动调整行为
+5. **文档维护**：及时更新配置和使用说明
 
 ---
 
-## 1. 项目概述
-- 核心功能：基于 pytest 与 olymat 工具集的测试脚手架，演示如何加载统一配置、初始化 SSH 测试环境与提供会话级上下文 ctx/cfg，用于快速编写与运行集成/功能测试。
-- 主要目标用户：编写自动化测试、环境验证与简单示例功能的 Python 开发者或测试工程师。
-
----
-
-## 2. 技术栈分析
-- 编程语言：Python（建议 3.10+）
-- 运行环境：已预置 venv；所有命令需在项目根目录 + 已激活 venv 中执行
-- 核心框架/库：
-  - pytest（测试框架，pytest.ini 已配置日志与选项）
-  - olymat（从 gitee 安装的内部/第三方工具集）
-  - olymat_comm（从 gitee 安装的通用组件）
-- 数据库：未使用
-- 其他关键技术：
-  - SSH 测试基建：通过 `olymat.utils.ssh_helper.init_ssh_fixtures` 初始化与分组
-  - 配置中心：通过 `olymat.plugin.get_conf()` 读取（支持默认配置与本地 conf.yaml 覆盖）
-
----
-
-## 3. 环境设置与启动指南
-
-### 3.1 依赖安装
-
-重要：本项目已预置 venv。所有命令均在“已激活 venv 且位于项目根目录”执行。
-- Windows PowerShell（在项目根目录）：
-```
-.\venv\Scripts\Activate.ps1
-```
-
-在项目根目录（已激活 venv）安装/更新依赖：
-```
-pip install -r requirements.txt
-```
-
-
-### 3.2 项目启动
-本项目为测试脚手架，无独立运行入口。以 pytest 驱动执行用例。所有工具或测试的执行均以 pytest 用例形式存在。
-前提：必须先在项目根目录激活 venv，然后在项目根目录执行命令。
-
-- 运行测试（项目根目录，已激活 venv）：
-```
-pytest
-```
-或使用 pytest.ini 中的推荐选项（已包含 -s/-x 与日志级别）：
-```
-pytest -s -x --log-cli-level=info
-```
-
-### 3.3 运行测试
-所有 pytest 命令均需在“项目根目录 + 已激活 venv”环境下执行。
-- 单文件/单目录选择性执行：
-```
-pytest test_hello
-pytest test_hello/test_hello/hello_test.py
-```
-- 过滤测试函数：
-```
-pytest -k "hello_cfg or hello_ctx"
-```
-遵循 pytest 最佳实践即可，本指南不展开更多细节。
-
----
-
-## 4. 项目结构分析
-
-### 4.1 目录结构（核心）
-- 根目录运行原则：所有命令均在项目根目录执行；pytest 前需激活 venv
-- `conf.yaml`：项目级配置（work_data_dir、插件进出端等）
-- `conftest.py`：根级 pytest 配置钩子（加载/初始化 olymat 配置）
-- `pytest.ini`：pytest 全局配置（minversion、日志、addopts）
-- `requirements.txt`：依赖清单（从 gitee 安装 olymat 与 olymat_comm）
-- `docs/`：文档目录（本指南位于 `docs/项目维护指南.md`）
-- 测试工具集（根目录下以 test_ 开头的文件夹即为工具集；可有多个；`test_hello` 为样例）
-  - `test_hello/`
-    - `__init__.py`
-    - `config.py`：封装 get_conf 为全局 Config（DotDict），并尽早初始化默认配置
-    - `conftest.py`：定义会话级 `cfg` 与 `ctx` fixture，初始化 SSH 测试夹具
-    - `confs/default.yaml`：工具集默认配置；在 `test_` 方法中通过 `cfg` fixture 访问
-    - `test_hello/hello_test.py`：样例用例，演示 cfg 读取与 ctx 跨用例持久化
-
-  - 你可以新增同结构的工具集目录，例如 `test_xxx/`、`test_api/` 等
-
-
-
-### 4.2 工具集结构约定（模板）
-建议每个工具集目录均与 `test_hello` 同构，典型模板如下：
-```
-test_xxx/
-  __init__.py
-  config.py
-  conftest.py
-  confs/
-    default.yaml
-  test_xxx/
-    sample_test.py
-```
-
-### 4.3 关键文件解读
-- 根级 `conftest.py`
-  - 通过 `update_olymat_conf` 与 `init_olymat_conf` 将 `get_conf()` 注入 pytest 配置，支持保护模式、安全模式等。
-- 工具集样例 `test_hello/`（其他工具集应与其结构一致）
-  - `config.py`：`get_g_conf()`（@func_run_once）返回 `Config(DotDict(get_conf()))`，导入即初始化，确保默认配置可用。
-  - `conftest.py`：
-    - `cfg` fixture（session）：返回全局配置
-    - `ctx` fixture（session）：使用 `make_default_ctx(__file__)` 构建跨用例共享上下文
-  - `test_hello/test_hello/hello_test.py`：
-    - `test_hello_cfg`：演示从配置中读取 `cfg.test_hello.hello`
-    - `test_hello_ctx` / `test_hello_ctx2`：验证 `ctx` 属性跨用例保持
-
-
----
-
-## 5. 核心模块与业务逻辑
-
-### 5.1 主要模块
-- 配置管理：`olymat.plugin.get_conf` + `DotDict`，统一读取默认/本地配置
-- 测试基建：pytest + 根级 conftest 钩子初始化
-- SSH 支撑：`init_ssh_fixtures` 基于 `env.servers` 分组构建 SSH 相关夹具
-- 上下文管理：`make_default_ctx` 提供会话级 `ctx`，简化跨用例状态共享
-- Fixture 约定：`cfg` 提供工具集 `confs/default.yaml` 合并后的配置；`ctx` 为会话级上下文，可在不同 `test_` 方法间共享
-
-### 5.2 典型数据流（测试执行）
-1. pytest 启动，根级 conftest 通过 `update_olymat_conf` 注入配置并 `init_olymat_conf`
-2. 导入 `test_hello/config.py` 时调用 `get_g_conf()`，确保默认/本地配置就位
-3. `test_hello/conftest.py` 初始化 SSH 夹具与会话级 `cfg`、`ctx`
-4. 测试用例运行，读取 `cfg.*` 配置，或在 `ctx` 上读写跨用例状态
-5. 会话结束时，根级 hook 可在非安全/调试模式下执行收尾逻辑
-
-
----
-
-## 6. 数据模型与持久化
-- 未使用 ORM 或数据库模型。
-
----
-
-## 7. 开发规范与工作流
-
-### 7.1 编码风格
-- Python 常规风格（建议遵循 PEP 8）
-- 测试命名：pytest 规范（文件/函数以 `test_*.py` / `test_*` 命名）
-- 避免使用异常吞噬来掩盖问题，应定位根因后修复
-
-
-
----
-
-
-## 附注
-以下主题在当前项目中未作强约束，AI IDE 无需特别关注：环境变量、工具 UI 配置（olymat_ui）、仓库根目录 conf.yaml 细节、新工具集流程、关键类/函数细表。
-
+**最后更新**：2025/9/4  
+**版本**：V1.0  
+**状态**：✅ 生产就绪
