--- a/docs/项目维护指南.md
+++ b/docs/项目维护指南.md
@@ -9,7 +9,6 @@
 ### 核心组件
 - **olymat 框架**：基础测试框架，提供配置管理和基础 fixtures
 - **Playwright**：浏览器自动化引擎
-- **pytest-asyncio**：异步测试支持
 - **SimpleBrowserAuth**：核心登录状态管理类
 
 ### 目录结构
@@ -20,7 +19,7 @@ test_core/
 ├── browser_helper.py         # 浏览器登录状态管理
 ├── conftest.py              # pytest fixtures 配置
 ├── test_browser/            # 浏览器测试用例
-│   └── test_local.py        # 示例测试
+│   └── test_baidu.py        # 示例测试
 └── auth/                    # 登录状态存储目录 (git ignored)
     └── *.json              # 用户登录状态文件
 ```
@@ -31,29 +30,19 @@ test_core/
 ```yaml
 browser:
   sites:
-    github:
-      login_url: "https://github.com/login"
-      success_selector: ".Header-link--profile"
-    local:
-      login_url: "data:text/html,<html><body><h1>Test Page</h1><div class='success'>Logged in</div></body></html>"
-      success_selector: ".success"
-  users: ["user_a", "user_b"]
+    baidu:
+      login_url: "https://www.baidu.com/"
+      success_selector: "#s-top-username"
 ```
 
 ### 配置说明
 - **sites**: 目标测试网站配置
   - `login_url`: 登录页面URL
   - `success_selector`: 登录成功验证的CSS选择器
-- **users**: 用户标识符列表，用于状态文件命名
 
 ## 🔧 核心功能
 
 ### 1. 登录状态管理 (`SimpleBrowserAuth`)
-
-**智能环境检测**：
-- VSCode 测试环境：自动无头模式 + 模拟登录
-- 命令行环境：有头模式 + 手动登录
-- 调试模式：保持交互式体验
 
 **状态持久化**：
 - 使用 Playwright 的 `storage_state()` 保存完整浏览器状态
@@ -64,20 +53,21 @@ browser:
 
 **Fixture 使用**：
 ```python
-@pytest.mark.parametrize('logged_in_page', [
-    {'site': 'github', 'user': 'user_a'}
-], indirect=True)
-async def test_github_feature(logged_in_page):
-    page = logged_in_page
-    # 直接使用已登录的 page 对象
-    await page.goto("https://github.com/settings")
-    # 业务逻辑测试...
-```
+# 在 conftest.py 中为每个用户定义一个 session 级别的 fixture
+@pytest.fixture(scope="session")
+def page_user_a(auth):
+    page, context = auth.get_logged_in_page('baidu', 'user_a')
+    yield page
+    context.close()
 
-**参数说明**：
-- `site`: 在 config.yaml 中定义的网站标识符
-- `user`: 用户标识符
-- `indirect=True`: 必须设置，让 pytest 将参数传递给 fixture
+# 在测试用例中直接使用 fixture
+def test_baidu_homepage_user_a(page_user_a):
+    """测试百度首页登录状态 - user_a"""
+    page = page_user_a
+    page.goto('https://www.baidu.com')
+    # ...
+```
+这种方式简化了测试用例的编写，无需再使用 `parametrize` 来间接传递参数。
 
 ## 🚀 使用方法
 
@@ -89,7 +79,7 @@ async def test_github_feature(logged_in_page):
 ### 2. 命令行运行测试
 ```bash
 # 运行单个测试
-pytest test_core/test_browser/test_local.py::test_local_page -v -s
+pytest test_core/test_browser/test_baidu.py::test_baidu_homepage_user_a -v -s
 
 # 运行所有浏览器测试
 pytest test_core/test_browser/ -v -s
@@ -104,7 +94,6 @@ pytest test_core/test_browser/ -v -s
 
 | 环境 | 浏览器模式 | 登录方式 | 超时时间 | 适用场景 |
 |------|------------|----------|----------|----------|
-| VSCode 测试 | 无头模式 | 模拟登录 | 10秒 | 快速测试验证 |
 | 命令行 | 有头模式 | 手动登录 | 5分钟 | 真实环境测试 |
 | 调试模式 | 有头模式 | 手动登录 | 5分钟 | 问题调试 |
 
@@ -122,59 +111,42 @@ browser:
 
 2. 创建测试用例：
 ```python
-@pytest.mark.parametrize('logged_in_page', [
-    {'site': 'new_site', 'user': 'user_a'}
-], indirect=True)
-async def test_new_site_feature(logged_in_page):
+# 在 conftest.py 中为新网站和用户创建 fixture
+@pytest.fixture(scope="session")
+def page_new_site_user_a(auth):
+    page, context = auth.get_logged_in_page('new_site', 'user_a')
+    yield page
+    context.close()
+
+# 在测试文件中使用
+def test_new_site_feature(page_new_site_user_a):
     # 测试逻辑
 ```
 
-### 添加新用户
-在 `default.yaml` 的 users 列表中添加：
-```yaml
-browser:
-  users: ["user_a", "user_b", "new_user"]
-```
 
-### 自定义模拟登录逻辑
-在 `browser_helper.py` 的 `_simulate_login_success` 方法中添加网站特定逻辑。
 
 ## 🛠️ 故障排除
 
 ### 常见问题
 
-**1. VSCode 测试卡住**
-- 检查 Python 扩展是否正常
-- 重启 VSCode
-- 确认 pytest 配置正确
-
-**2. 登录状态失效**
-- 删除 `auth/` 目录下对应的状态文件
-- 重新运行测试，手动登录
-
-**3. 选择器找不到元素**
+**1. 选择器找不到元素**
 - 检查 `success_selector` 配置
 - 使用浏览器开发者工具验证选择器
 - 考虑页面加载时间，调整超时设置
-
-**4. 异步测试问题**
-- 确保测试函数使用 `async def`
-- 使用 `await` 调用异步方法
-- 检查 `pytest-asyncio` 插件是否安装
 
 ### 调试技巧
 
 **查看浏览器状态**：
 ```python
 # 在测试中添加调试代码
-await page.screenshot(path="debug.png")
-print(await page.content())
+page.screenshot(path="debug.png")
+print(page.content())
 ```
 
 **检查登录状态文件**：
 ```bash
 # 查看保存的状态
-cat auth/github_user_a.json
+cat auth/baidu_user_a.json
 ```
 
 ## 🔄 维护任务
@@ -184,23 +156,6 @@ cat auth/github_user_a.json
 2. **更新选择器**：网站改版时更新 `success_selector`
 3. **依赖更新**：定期更新 Playwright 和相关依赖
 
-### 扩展开发
-1. **支持更多浏览器**：Chrome, Firefox, Safari
-2. **并发测试**：多用户并行测试
-3. **报告增强**：集成测试报告和截图
-4. **CI/CD 集成**：自动化测试流水线
-
-## 📊 性能优化
-
-### 建议配置
-- **VSCode 测试**：使用无头模式，快速验证
-- **CI/CD**：启用并发执行，设置合理超时
-- **本地开发**：保持状态文件，减少重复登录
-
-### 资源管理
-- 每个测试使用独立浏览器上下文
-- 测试结束后自动清理资源
-- 合理设置超时时间避免资源泄露
 
 ## 🎯 最佳实践
 
@@ -210,8 +165,3 @@ cat auth/github_user_a.json
 4. **环境适配**：根据运行环境自动调整行为
 5. **文档维护**：及时更新配置和使用说明
 
----
-
-**最后更新**：2025/9/4  
-**版本**：V1.0  
-**状态**：✅ 生产就绪
