browser_helper.py

--- a/docs/项目维护指南.md
+++ b/docs/项目维护指南.md
@@ -20,7 +20,7 @@ test_core/
 ├── conftest.py              # pytest fixtures 配置
 ├── test_browser/            # 浏览器测试用例
 │   └── test_baidu.py        # 示例测试
-└── auth/                    # 登录状态存储目录 (git ignored)
+└── auth_page/                    # 登录状态存储目录 (git ignored)
     └── *.json              # 用户登录状态文件
 ```
 
@@ -47,7 +47,7 @@ browser:
 **状态持久化**：
 - 使用 Playwright 的 `storage_state()` 保存完整浏览器状态
 - 包含 cookies, localStorage, sessionStorage 等
-- 文件格式：`auth/{site}_{user}.json`
+- 文件格式：`auth_page/{site}_{user}.json`
 
 ### 2. 测试编写接口
 
@@ -55,8 +55,8 @@ browser:
 ```python
 # 在 conftest.py 中为每个用户定义一个 session 级别的 fixture
 @pytest.fixture(scope="session")
-def page_user_a(auth):
-    page, context = auth.get_logged_in_page('baidu', 'user_a')
+def page_user_a(auth_page):
+    page, context = auth_page.get_logged_in_page('baidu', 'user_a')
     yield page
     context.close()
 
@@ -97,6 +97,13 @@ pytest test_core/test_browser/ -v -s
 | 命令行 | 有头模式 | 手动登录 | 5分钟 | 真实环境测试 |
 | 调试模式 | 有头模式 | 手动登录 | 5分钟 | 问题调试 |
 
+## 📊 数据提取与使用
+
+- **2025年真题数据**: 已从希赛网提取并结构化保存至 `docs/2025_exam_questions.json`。
+  - **文件路径**: `docs/2025_exam_questions.json`
+  - **内容格式**: JSON 数组，包含每个真题的 `title` (标题) 和 `url` (链接)。
+  - **用途**: 可用于分析真题趋势、构建学习资源或集成到其他应用中。
+
 ## 📝 开发指南
 
 ### 添加新网站支持
@@ -113,8 +120,8 @@ browser:
 ```python
 # 在 conftest.py 中为新网站和用户创建 fixture
 @pytest.fixture(scope="session")
-def page_new_site_user_a(auth):
-    page, context = auth.get_logged_in_page('new_site', 'user_a')
+def page_new_site_user_a(auth_page):
+    page, context = auth_page.get_logged_in_page('new_site', 'user_a')
     yield page
     context.close()
 
@@ -146,13 +153,13 @@ print(page.content())
 **检查登录状态文件**：
 ```bash
 # 查看保存的状态
-cat auth/baidu_user_a.json
+cat auth_page/baidu_user_a.json
 ```
 
 ## 🔄 维护任务
 
 ### 定期维护
-1. **清理过期状态文件**：定期删除 `auth/` 目录下的旧文件
+1. **清理过期状态文件**：定期删除 `auth_page/` 目录下的旧文件
 2. **更新选择器**：网站改版时更新 `success_selector`
 3. **依赖更新**：定期更新 Playwright 和相关依赖
 
